# disney-reviews-analysis

./: .gitignore  OVERVIEW.md  README.md  config.py  initialize_vector_db.py  pyproject.toml  run.py  test_chromadb_filters.py
analysis/: __init__.py  keywords.py  sentiment.py
data_ingestion/: __init__.py  data_loader.py
insights/: __init__.py  insight_generator.py
llm_qa/: __init__.py  document_store.py  qa_chain.py
ui/: __init__.py  streamlit_app.py
utils/: __init__.py  logger.py
