[project]
name = "llm-assignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "chromadb>=1.0.9",
    "ipykernel>=6.29.5",
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "langchain-openai>=0.3.16",
    "langgraph>=0.4.3",
    "loguru>=0.7.3",
    "nbformat>=5.10.4",
    "nltk>=3.9.1",
    "openai>=1.78.1",
    "pandas>=2.2.3",
    "plotly[express]>=6.0.1",
    "polars>=1.29.0",
    "python-dotenv>=1.1.0",
    "scikit-learn>=1.6.1",
    "streamlit>=1.45.1",
    "textblob>=0.19.0",
]
